--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ main {
 	flex-wrap: wrap;
 	flex: 3 1 350px;
 	aspect-ratio: 1 / 1;
-    background-color: #ffffff;
+    background-color: #eeeeee;
 }
 
 #canvas > div {
